[fix] Correction multihosts